--- a/app/locales/taiga/locale-en.json
+++ b/app/locales/taiga/locale-en.json
@@ -200,9 +200,25 @@
             "TITLE": "filters",
             "INPUT_PLACEHOLDER": "Subject or reference",
             "TITLE_ACTION_FILTER_BUTTON": "search",
-            "BREADCRUMB_TITLE": "back to categories",
-            "BREADCRUMB_FILTERS": "Filters",
-            "BREADCRUMB_STATUS": "status"
+            "TITLE": "Filters",
+            "INPUT_SEARCH_PLACEHOLDER": "Subject or ref",
+            "TITLE_ACTION_SEARCH": "Search",
+            "ACTION_SAVE_CUSTOM_FILTER": "save as custom filter",
+            "PLACEHOLDER_FILTER_NAME": "Write the filter name and press enter",
+            "CATEGORIES": {
+                "TYPE": "Type",
+                "STATUS": "Status",
+                "SEVERITY": "Severity",
+                "PRIORITIES": "Priorities",
+                "TAGS": "Tags",
+                "ASSIGNED_TO": "Assigned to",
+                "CREATED_BY": "Created by",
+                "CUSTOM_FILTERS": "Custom filters"
+            },
+            "CONFIRM_DELETE": {
+                "TITLE": "Delete custom filter",
+                "MESSAGE": "the custom filter '{{customFilterName}}'"
+            }
         },
         "WYSIWYG": {
             "H1_BUTTON": "First Level Heading",
@@ -1145,9 +1161,7 @@
             "TITLE": "Filters",
             "REMOVE": "Remove Filters",
             "HIDE": "Hide Filters",
-            "SHOW": "Show Filters",
-            "FILTER_CATEGORY_STATUS": "Status",
-            "FILTER_CATEGORY_TAGS": "Tags"
+            "SHOW": "Show Filters"
         },
         "SPRINTS": {
             "TITLE": "SPRINTS",
@@ -1254,7 +1268,6 @@
         "SECTION_NAME": "Issue details",
         "ACTION_NEW_ISSUE": "+ NEW ISSUE",
         "ACTION_PROMOTE_TO_US": "Promote to User Story",
-        "PLACEHOLDER_FILTER_NAME": "Write the filter name and press enter",
         "PROMOTED": "This issue has been promoted to US:",
         "EXTERNAL_REFERENCE": "This issue has been created from",
         "GO_TO_EXTERNAL_REFERENCE": "Go to origin",
@@ -1271,28 +1284,6 @@
         "CONFIRM_PROMOTE": {
             "TITLE": "Promote this issue to a new user story",
             "MESSAGE": "Are you sure you want to create a new US from this Issue?"
-        },
-        "FILTERS": {
-            "TITLE": "Filters",
-            "INPUT_SEARCH_PLACEHOLDER": "Subject or ref",
-            "TITLE_ACTION_SEARCH": "Search",
-            "ACTION_SAVE_CUSTOM_FILTER": "save as custom filter",
-            "BREADCRUMB": "Filters",
-            "TITLE_BREADCRUMB": "Filters",
-            "CATEGORIES": {
-                "TYPE": "Type",
-                "STATUS": "Status",
-                "SEVERITY": "Severity",
-                "PRIORITIES": "Priorities",
-                "TAGS": "Tags",
-                "ASSIGNED_TO": "Assigned to",
-                "CREATED_BY": "Created by",
-                "CUSTOM_FILTERS": "Custom filters"
-            },
-            "CONFIRM_DELETE": {
-                "TITLE": "Delete custom filter",
-                "MESSAGE": "the custom filter '{{customFilterName}}'"
-            }
         },
         "TABLE": {
             "COLUMNS": {
